Update link for 'The Rewiring Demon: Rectified Flow'

--- a/assets/slides/index.html
+++ b/assets/slides/index.html
@@ -46,7 +46,7 @@
   <h1>ICML 2025 Tutorial Slides</h1>
   <ul>
     <li><a href="icml_01_flowintro.pdf" target="_blank" rel="noopener noreferrer">Introduction</a></li>
-    <li><a href="icml_02_marginal_preservation.pdf" target="_blank" rel="noopener noreferrer">The Rewiring Demon: Rectified Flow</a></li>
+    <li><a href="icml_01_02_flowintro.pdf" target="_blank" rel="noopener noreferrer">The Rewiring Demon: Rectified Flow</a></li>
     <li><a href="icml_02_marginal_preservation.pdf" target="_blank" rel="noopener noreferrer">Blessing of Continuity: Marginal Preservation</a></li>
     <li><a href="icml_03_transport_cost.pdf" target="_blank" rel="noopener noreferrer">Blessing of Straightness: Transport Cost</a></li>
     <li><a href="icml_04_interpolation.pdf" target="_blank" rel="noopener noreferrer">Blessing of Symmetry: Equivariance</a></li>
